--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 h1 {
   text-align: center;
   background-color: rgb(200, 200, 255);
-  max-width: fit-content;
+  max-width: 99%;
   margin: auto;
   padding: 0.5rem 2rem;
   border-radius: 5px;
